--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,16 @@ services:
         - default=$HOME/.ssh/id_rsa
       dockerfile: docker/clockwork/Dockerfile
 
+  ui-runner:
+    image: ui-runner
+    build:
+      context: .
+      ssh: 
+        - default=$HOME/.ssh/id_rsa
+      dockerfile: docker/ui/Dockerfile
+    ports:
+      - "8050:8050"
+
   sumo-simulator:
     image: sumo-world
     build:
