--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,13 @@ services:
     ports:
       - "8050:8050"
 
+  indicators:
+    image: indicators
+    container_name: oc_indicators_container
+    build:
+      context: .
+      dockerfile: docker/indicators/Dockerfile
+
   sumo-simulator:
     image: simengine-runner
     container_name: oc_simengine_container
