Renaming some files and making changes to accomodate move to src

--- a/docker/indicators/Dockerfile
+++ b/docker/indicators/Dockerfile
@@ -10,4 +10,4 @@ RUN pip install --no-cache-dir -r docker/indicators/requirements.txt
 
 
 
-ENTRYPOINT ["sh", "docker/indicators/start.sh"]
+ENTRYPOINT ["sh", "docker/indicators/run_indicators.sh"]
