--- a/docker/clockwork/requirements.txt
+++ b/docker/clockwork/requirements.txt
@@ -8,3 +8,4 @@ pytz==2024.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 transitions==0.9.2
 tzdata==2024.2; python_version >= '2'
+keyboard
