--- a/docker/ui/requirements.txt
+++ b/docker/ui/requirements.txt
@@ -35,3 +35,4 @@ tzdata==2024.2; python_version >= '2'
 urllib3==2.2.3; python_version >= '3.8'
 werkzeug==3.0.6; python_version >= '3.8'
 zipp==3.20.2; python_version >= '3.8'
+keyboard
